# RustCompiler

./: .gitignore  Cargo.toml  README.md  build_locally.sh  example.vc  install_locally.sh  vc
src/: ast.rs  checker.rs  globals.rs  lib.rs  main.rs  parser.rs  scanner.rs  token.rs  utils.rs
src/AST/: array_type.rs  decl.rs  draft_visitor.rs  empty_expr.rs  expression.rs  ident.rs  list.rs  literals.rs  primitive_types.rs  program.rs  statement.rs  variable.rs
src/scanner/: scanner_handlers.rs
src/utils/: unparser.rs
tests/: integration_tests.rs  parser_tests.rs  scanner_tests.rs  unparsing_tests.rs
tests/Checker/: arrNameMisuse.sol  arrNameMisuse.vc  floatToIntFail.j  floatToIntFail.sol  floatToIntFail.vc  identifierUndeclared.vc  incompatibleForExpr.vc  jinglingErrors.sol  jinglingErrors.vc  jinglingReturn.vc  successfulBreak.sol  successfulParameterParse.vc  successfulReturn.vc  testArrayExprList.sol  testArrayExprList.vc  testComplex.vc  testExtraParams.sol  testExtraParams.vc  testFib.sol  testFuncCall.j  testFuncCall.sol  testFuncCall.vc  testWrongParaType.sol  testWrongParaType.vc
tests/Parser/input/: t57.vc  t58.vc  tNumerics.vc
tests/Parser/output/: t57.out  t57.sol
tests/Parser/vc_input_output/input/: t20.vc  t59.vc
tests/Scanner/inputFiles/: all_separators.vc  literals_identifiers.vc  lparen_test.vc  tab2.vc  testWhitespace.vc
tests/Scanner/solutionFiles/: tab2.sol  testParentheses.sol  testWhitespace.sol
tests/Scanner/solutionFilesRust/: fib.sol  gcd.sol  printed_gcd.sol
tests/custom/: greatest_common_divisor.vc  simple_gcd_signature.vc
(+4 files in other folders)
