[package]
name = "vc"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["cargo", "derive"] }
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.17.1"
pretty_env_logger = "0.5.0"
regex = "1.8.1"
test-log = "0.2.11"

